creating unit tests